--- a/srcs/requirements/bonus/simple_site/simple_site.html
+++ b/srcs/requirements/bonus/simple_site/simple_site.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HELLO FROM INCEPTION</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-        <h1>Hello from my inception tahyabe chi haja lakhar hhe</h1>    
+         <header class="header">
+            <a href="#" class="logo">Portfolio.</a>
+         </header>
+        <section class="home">
+            <div class="home-content">
+                <h3>Hello, It's Me</h3>
+                <h1>Othman Mallah</h1>
+                <h3>And I'm a <span>Frontend Developer</span></h3>
+            </div>
+        </section>
 </body>
 </html>
